--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     padding: 0%;
     color: antiquewhite;
 
-    --nav-color: rgb(20, 61, 148);
+    --nav-color: rgb(21, 21, 199);
 }
 
 html {
@@ -16,7 +16,7 @@ html {
 body {
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgb(0, 110, 255), rgb(21, 21, 199));
+    background: linear-gradient(rgb(21, 21, 199), rgb(0, 110, 255));
     
     display: flex;
     flex-direction: column;
@@ -35,6 +35,10 @@ nav {
     justify-content: space-around;
 }
 
+nav:first-child {
+    border-left: !important none;
+} /* How to get this to override the border declared below */
+
 .set-time {
     background-color: var(--nav-color);
     border-left: 1px solid rgba(255, 255, 255, 0.774);
@@ -46,13 +50,14 @@ nav {
     justify-content: center;
 }
 
+
 #enter-time {
     display: flex;
     height: 100%;
     background: var(--nav-color);
     border-left: 1px solid rgba(255, 255, 255, 0.774);
     border-right: 1px solid rgba(255, 255, 255, 0.774);
-
+    width: auto;
     padding-left: 10px;
 }
 
