input functionality, removed arrows from number input

--- a/style.css
+++ b/style.css
@@ -73,3 +73,15 @@ nav:first-child {
 #countdown {
     font-size: 100px;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
